# TinyCPUEmulator

./: .gitignore  1.txt  CMakeLists.txt  README.md  TaskList.txt  source.asm
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml  macos-build.yml  windows-build.yml
Logs/: 29-04-2026.txt
bins/Darwin/: Program
src/: Logger.cpp  emu_cpu.cpp  emu_decoder.cpp  emu_disasm.cpp  emu_loader.cpp  emu_main.cpp  emu_main.cpp.bak  emu_main_REMOTE_811.cpp  emu_memory.cpp  emu_program.cpp  main_main.cpp
src/headers/: emu_enums.h
src/include/: Logger.h  emu_cpu.h  emu_decoder.h  emu_disasm.h  emu_enums.h  emu_loader.h  emu_memory.h  emu_program.h
